# colorunittest

./: setup.cfg
src/colorunittest_hilariesit.egg-info/: PKG-INFO  SOURCES.txt
