[metadata]
name = colorunittest-hilariesit
version = 0.0.9
author = Hilarie Sit
author_email = hs764@cornell.edu
description = Reformatted, colored unittest output for Jupyter Notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hilariesit/colorunittest
project_urls =
    Bug Tracker = https://github.com/hilariesit/colorunittest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    termcolor

[options.packages.find]
where = src